--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,6 +69,35 @@ h5 {
   font-size: 12px;
 }
 
+@media screen and ($breakPoint1) {
+  h1 {
+    font-size: 100px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+}
+@media screen and ($breakPoint2) {
+  h1 {
+    font-size: 80px;
+  }
+}
+@media screen and ($breakPoint4) {
+  h1 {
+    font-size: 60px;
+  }
+}
+@media screen and ($breakPoint5) {
+  h1 {
+    font-size: 40px;
+  }
+}
+@media screen and ($breakPoint6) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
 // extends
 .clear {
   clear: both;
