--- a/assets/css/mixins.scss
+++ b/assets/css/mixins.scss
@@ -4,3 +4,10 @@
   column-gap: 20px;
   row-gap: 20px;
 }
+
+@mixin grid-4 {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  column-gap: 20px;
+  row-gap: 20px;
+}
