--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,7 @@ html,
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: hidden;
 
   -webkit-user-select: none;
   user-select: none;
@@ -88,10 +89,16 @@ h5 {
   h1 {
     font-size: 60px;
   }
+  h4 {
+    font-size: 14px;
+  }
 }
 @media screen and ($breakPoint5) {
   h1 {
     font-size: 40px;
+  }
+  h3 {
+    font-size: 18px;
   }
 }
 @media screen and ($breakPoint6) {
@@ -99,7 +106,10 @@ h5 {
     font-size: 30px;
   }
   h3 {
-    font-size: 18px;
+    font-size: 16px;
+  }
+  h4 {
+    font-size: 12px;
   }
 }
 
