--- a/assets/css/mixins.scss
+++ b/assets/css/mixins.scss
@@ -5,6 +5,13 @@
   row-gap: 20px;
 }
 
+@mixin grid-6 {
+  display: grid;
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
 @mixin grid-4 {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
