--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,12 +13,11 @@ html,
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: hidden;
 
-  -webkit-user-select: none;
-  user-select: none;
+  // -webkit-user-select: none;
+  // user-select: none;
 
-  touch-action: none;
+  // touch-action: none;
 
   width: 100%;
   height: 100%;
